# alex

./: .gitignore  README.md  setup.cfg  setup.py
alex/: __init__.py  cli.py  run.py
alex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
alex/entropy/: __init__.py  entropy_correlation.py  memory_parser.py
alex/kullback_leibler/: __init__.py  diff_map_kl_probs.py  diff_mat_kl_probs.py  kl_probabilities.py  only_diff_mat.py  only_kl_probs.py
alex/mappings/: __init__.py  aa_dict.py  data_handler.py  make_counts.py
alex/mutual_information/: __init__.py  generate_mi_params.py  mutual_info.py  parse_mi_params.py
alex/optimization_entropy/: Smap_analysis.py  __init__.py  memory_parser.py  retrieve_entropy.py
alex/preliminar-analysis/: __init__.py  writemaps.py
alex/preliminar_analysis/: __init__.py  energy_xvg_to_txt.py  parser_probfile.py  retrieve_entropy.py  writemaps.py
alex/trajectory/: __init__.py  traj_slicing.py
alex/trajectory_processing/: __init__.py  fraction_native_contacts.py  is_traj_equilibrated.py  traj_slicing.py  xtc_to_xyz.py
