[metadata]
name = alex
version = 1.0
author = Alessia Guadagnin Pattaro
author_email = alessia.guadagnin@unitn.it
description = Postprocessing and analysis of data obtained from the EXCOGITO software
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/alessiagp/alex
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.12
install_requires =
    numpy
    requests
    pandas
    scipy
    mdtraj
    MDAnalysis

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    mycli = alex.cli:main
